--- a/templates/login.html
+++ b/templates/login.html
@@ -7,6 +7,11 @@
   <div class="lg-logo">
     <img src="/static/template/logo.png">
   </div>
+  {% if error %}
+  <div class="alert alert-danger">
+    {{error}}
+  </div>
+  {% endif %}
   <div class="white-box">
     <h4 class="text-center">Login</h4>
     <hr>
