--- a/templates/login.html
+++ b/templates/login.html
@@ -27,7 +27,7 @@
       
       <div class="form-button text-center">
           <button type="submit" class="btn btn-primary btn-block">Login</button>
-          <div class="tb-margin-low">Don't have an account? <a href="/signup">Signup</a></p>
+          <div class="tb-margin-low">don't have an account? <a href="/signup">Signup</a></p>
       </div>      
     </form>
   </div>
