--- a/templates/signup.html
+++ b/templates/signup.html
@@ -28,7 +28,7 @@
       </div>
       <div class="form-button text-center">
           <button type="submit" class="btn btn-success btn-block">Signup</button>
-          <div class="tb-margin-low">Already have an account? <a href="/login">Login</a></p>
+          <div class="tb-margin-low">already have an account? <a href="/login">Login</a></p>
       </div>      
     </form>
   </div>
