Minor CSS changes

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -13,7 +13,7 @@
   {% if id_duplicated %}
   <div class="alert alert-danger">Username already taken</div>
   {% endif %}
-  <div class="white-box">
+  <div class="white-box bolder">
     <h4 class="text-center">Signup</h4>
     <hr>
     <form method="POST">
