--- a/templates/login.html
+++ b/templates/login.html
@@ -12,13 +12,13 @@
     {{error}}
   </div>
   {% endif %}
-  <div class="white-box">
+  <div class="white-box bolder">
     <h4 class="text-center">Login</h4>
     <hr>
     <form method="POST">
       <div class="form-group">
         <label for="lg_username">Username</label>
-        <input type="text" name="lg_username" class="form-control" id="lg_username" placeholder="Enter username">
+        <input type="text" name="lg_username" class="form-control" id="lg_username" placeholder="Enter Username">
       </div>
       <div class="form-group">
         <label for="lg_password">Password</label>
