--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,42 @@
 {% extends "layout.html" %}
 {% block body %}
-<h1 class="text-center">
-Welcome Home!
-</h1>
+<div class="white-box tb-margin">
+    <h3 class="text-center">Enroll or leave</h1>
+    <table class="table table-striped table-sm">
+        <thead class="thead-dark">
+            <tr>
+                <th>Row</th>
+                <th>Unit Name</th>
+                <th>Unit Code</th>
+                <th>Credits</th>
+                <th>Action</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for unit in units %}
+            <tr>
+                <td>{{loop.index}}</td>
+                <td>{{unit.title}}</td>
+                <td>{{unit.unit_code}}</td>
+                <td>{{unit.credits}}</td>
+                <td>
+                    {% if unit.user_id %}
+                    <form action="/leave" method="POST">
+                        <input type="hidden" name="unit_id" value="{{unit.uid}}" >
+                        <input type="hidden" name="token" value="{{ token }}" >                        
+                        <button class="btn btn-secondary btn-sm">Leave</button>
+                    </form>
+                    {% else %}
+                    <form action="/enroll" method="POST">
+                        <input type="hidden" name="unit_id" value="{{unit.uid}}" >
+                        <input type="hidden" name="token" value="{{ token }}" >
+                        <button class="btn btn-primary btn-sm">Enroll</button>
+                    </form>
+                    {% endif%}
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
 {% endblock %}
