--- a/templates/signup.html
+++ b/templates/signup.html
@@ -13,6 +13,10 @@
   {% if id_duplicated %}
   <div class="alert alert-danger">Username already taken</div>
   {% endif %}
+  {% if empty_captcha %}
+  <div class="alert alert-danger">Please check the recaptcha.</div>
+  {% endif %}
+  
   <div class="white-box bolder">
     <h4 class="text-center">Signup</h4>
     <hr>
@@ -29,6 +33,7 @@
         <label for="sgn_password">Password</label>
         <input type="password" name="sgn_password" class="form-control" id="sgn_password" placeholder="Password">
       </div>
+      <div class="g-recaptcha mb-2" data-sitekey="6LeDCk0UAAAAAK8py3jkgp_DfccO730X2UkaPQmH"></div>
       <div class="form-button text-center">
           <button type="submit" class="btn btn-success btn-block">Signup</button>
           <div class="tb-margin-low">already have an account? <a href="/login">Login</a></p>
@@ -36,4 +41,7 @@
     </form>
   </div>
 </div>
+{% endblock %}
+{% block scripts %}
+<script src='https://www.google.com/recaptcha/api.js'></script>
 {% endblock %}
