--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="/static/css/bootstrap.min.css" >
     <link rel="stylesheet" href="/static/css/main.css" >
-    <link rel="icon" type="image/x-icon" href="{{ base_url() }}/theme/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="{{ base_url() }}/static/template/favicon.ico" />
     {% block styles %}{% endblock %}
     <title>Students Enroller | {{page_title}}</title>
   </head>
