--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="/static/css/bootstrap.min.css" >
-    <link rel="stylesheet" href="/static/css/main.css" >
+    <link rel="stylesheet" href="{{ base_url() }}/static/css/bootstrap.min.css" >
+    <link rel="stylesheet" href="{{ base_url() }}/static/css/main.css" >
     <link rel="icon" type="image/x-icon" href="{{ base_url() }}/static/template/favicon.ico" />
     {% block styles %}{% endblock %}
     <title>Students Enroller | {{page_title}}</title>
@@ -14,7 +14,7 @@
     {% if full_name %}
       <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
         <a class="navbar-brand" href="#">
-          <img src="/static/template/logo-white.png" height="30" alt="">
+          <img src="{{ base_url() }}/static/template/logo-white.png" height="30" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
           aria-expanded="false" aria-label="Toggle navigation">
@@ -23,16 +23,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item {% if page_title == 'Enroll'%}active{% endif %}">
-              <a class="nav-link" href="/">Enroll
+              <a class="nav-link" href="{{ base_url() }}/">Enroll
                 <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item {% if page_title == 'Reports'%}active{% endif %}">
-              <a class="nav-link" href="/reports">Reports</a>
+              <a class="nav-link" href="{{ base_url() }}/reports">Reports</a>
             </li>
           </ul>
           <span class="navbar-text">
-              Welcome, {{full_name}}! (<a href="/logout">Logout</a>)
+              Welcome, {{full_name}}! (<a href="{{ base_url() }}/logout">Logout</a>)
           </span>
         </div>
       </nav>
@@ -40,8 +40,8 @@
     <div class="container">
     {% block body %}{% endblock %}
     </div>
-    <script src="/static/js/jquery-3.3.1.min.js"></script>
-    <script src="/static/js/bootstrap.bundle.min.js"></script>
+    <script src="{{ base_url() }}/static/js/jquery-3.3.1.min.js"></script>
+    <script src="{{ base_url() }}/static/js/bootstrap.bundle.min.js"></script>
     {% block scripts %}{% endblock %}
   </body>
 </html>
