--- a/templates/reports.html
+++ b/templates/reports.html
@@ -1,7 +1,11 @@
 {% extends "layout.html" %}
 {% block body %}
 <div class="white-box tb-margin">
+    {% if selectedUser %}
+    <h3 class="text-center">{{selectedUser}} - Enrolled Units</h3>
+    {% else %}
     <h3 class="text-center">Reports</h3>
+    {% endif %}
     <hr>
     <div class="row">
         <div class="col">
